# tobedeleted

./: .gitignore  README.md  pyproject.toml  sample-prompt  test.html  test2.html
app/: main.py
app/agent/: alert_summary.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  alerts.py  feedback.py  health.py
app/core/: __init__.py  config.py  errors.py  exception_handlers.py  logging.py  middleware.py
app/redis/: cache_store.py  example.py  redis_client.py  redis_lock.py  summary_service.py
app/repositories/: __init__.py  feedback_repo.py
app/schemas/: __init__.py  alert.py  feedback.py
app/services/: __init__.py  alert_client.py
instructions/: 01-requirements-and-design-prompt.md  02-spring-boot-implementation-instructions.md  correlate.txt  fast-api-requirements  python-fastapi-jwt-and-structured-logging-prompt.md  questions  risk-signals-1.txt  risk-signals.txt
