[project]
name = "alert-summarizer"
version = "0.1.0"
description = "FastAPI + LangChain Azure OpenAI alert summarizer with streaming and structured logging"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "orjson>=3.9",
  "python-json-logger>=2.0.7",
  "langchain>=0.2.12",
  "langchain-openai>=0.1.20",
  "tiktoken>=0.7.0",
  "redis>=7.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.uv]
# uv handles locking automatically via uv.lock (optional)